# sandbox-new-python-tool

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: github_copilot_in_vscode.md
mlflow/: .htpasswd  Dockerfile.mlflow  Dockerfile.nginx  docker-compose.yml  docker-entrypoint.sh  nginx.conf
src/dataframe_library/: gen_sample_data.py  pandas_code.ipynb  polars_code.ipynb
src/dataframe_library/sample_data/: weight_data.xlsx
src/polars/: compare_polars_to_pandas.py  gen_sample_data.py  getting_start_polars.py  polars_code.ipynb
src/polars/sample_data/: blood_data.csv  blood_data_weight.csv  data1_weight.csv
src/sandbox_new_python_tool/polars/: gen_sample_data.py  getting_start_polars.py  polars.md
src/sandbox_new_python_tool/polars/sample_data/: blood_data.csv
